--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 28px;
   padding-top: 0;
-  background:rgb(129,175,177) !important;
+  background:rgb(29,75,77) !important;
 }
 
 #footer {
@@ -44,7 +44,7 @@ body {
 
 
 .h1 {
-  margin-bottom: 42px; /* (@padding-base-vertical * 7) */
+  margin-bottom: 32px; /* (@padding-base-vertical * 7) */
 }
 
 #top {
@@ -78,8 +78,9 @@ view) */
 
 #info {
     font-size:32px;
-    margin-bottom:0px;
+    margin-bottom:10px;
     padding-top:20px;
+    color:white;
 }
 
 #spacer {
@@ -95,7 +96,7 @@ view) */
 }
 
 #go {
-    margin-bottom:20px;
+    margin-bottom:0px;
 }
 
 
@@ -183,60 +184,12 @@ view) */
 }
 
 
-.twitter-typeahead .tt-query,
-.twitter-typeahead .tt-hint {
-    margin-bottom: 0;
-}
-.tt-hint {
-    display: block;
-    width: 100%;
-    height: 38px;
-    padding: 8px 12px;
-    font-size: 14px;
-    line-height: 1.428571429;
-    color: #999;
-    vertical-align: middle;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out
-0.15s;
-          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out
-0.15s;
-}
-.tt-dropdown-menu {
-    min-width: 160px;
-    margin-top: 2px;
-    padding: 5px 0;
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-    background-clip: padding-box;
- 
-}
-.tt-suggestion {
-    display: block;
-    padding: 3px 20px;
-}
-.tt-suggestion.tt-is-under-cursor {
-    color: #fff;
-    background-color: #428bca;
-}
-.tt-suggestion.tt-is-under-cursor a {
-    color: #fff;
-}
-.tt-suggestion p {
-    margin: 0;
-}
-
 #pause-play {
     margin-bottom:20px;
 }
 
 .play-button {
+}
+
+#search-results {
 }
